@@ -5,25 +5,35 @@ Create missing index (idx) files
 ********************************
 
 The idx-services creates missing xtc-index (idx) files. It consists of two components: A services that
-queries a queue for new requests, submits them to the batch queue and checks if the index files have 
+queries a queue for new requests, submits them to the batch system and checks if the index files have 
 been created. The second component are clients that add requests to the queue. The clients are either 
 the irods file restore process (univMSSInterface.sh) or a daemon that checks for failed idx transfers 
 and adds them to the queue.
+
+The queue is implemented using a local sqlite database. Therefore the clients and server have to run
+on the same host.
 
 Tools
 =====
 
 idx-q-server 
 ------------
-Service that submits request to batch. Runs as daemon controlled by supervisord.
+Service that submits request to batch. Runs as daemon controlled by supervisord. It is configured
+using a INI style config file reading the *idxService* section. An example is on the data directory 
+of the DmMover package. 
+
 
 idx-failed-regdb
 ----------------
-create missing idx files that failed the transfer by a data-mover
+Create missing idx files that failed the transfer by a data-mover. It checks the data migration table 
+for index files that failed the transfer in the last N hours and the ones that are found are added to the 
+queue.
 
 idx-q-cmd 
 ---------
-command line tool to add request and list status.
+Command line tool to add request and list status. Access the database that hosts the queue directly. 
+The path to the database and the WAIT semaphore files are modified by the two env variables *DM_IDX_DB* 
+and *DM_IDX_WAIT*
 
 idx-create
 ----------
